fourth form degree